--- a/_posts/2023-06-18-群表示论.md
+++ b/_posts/2023-06-18-群表示论.md
@@ -1,4 +1,4 @@
-```html
+```yaml
 title: 群表示论
 author: Wangq1h
 date: 2023-2-2 23:28:00 +0800
@@ -7,7 +7,6 @@ tags: [typography]
 pin: true
 math: true
 mermaid: true
-  alt: Responsive rendering of Chirpy theme on multiple devices.
 ```
 
 # 群表示论
