--- a/_posts/2023-01-26-代数系和数系.md
+++ b/_posts/2023-01-26-代数系和数系.md
@@ -2,9 +2,9 @@
 title: 代数系和数系
 author: wangq1h
 date: 2023-01-26 00:08:00 +0800
-categories: [物理学中的几何方法]
+categories: [Geometric Method in Physics]
 tags: [数系]
-pin: true
+pin: false
 math: true
 mermaid: true
 ---
