--- a/_posts/2023-01-27-向量空间的理论.md
+++ b/_posts/2023-01-27-向量空间的理论.md
@@ -2,7 +2,7 @@
 title: 向量空间的理论
 author: wangq1h
 date: 2023-01-27 22:40:00 +0800
-categories: [物理学中的几何方法]
+categories: [Geometric Method in Physics]
 tags: [向量空间]
 pin: true
 math: true
