--- a/_posts/2023-02-01-群论基础.md
+++ b/_posts/2023-02-01-群论基础.md
@@ -2,9 +2,9 @@
 title: 群论基础
 author: wangq1h
 date: 2023-02-01 23:32:00 +0800
-categories: [物理学中的几何方法]
+categories: [Geometric Method in Physics]
 tags: [群论]
-pin: true
+pin: false
 math: true
 mermaid: true
 ---
