--- a/_posts/2023-02-12-张量概述.md
+++ b/_posts/2023-02-12-张量概述.md
@@ -2,9 +2,9 @@
 title: 张量概述
 author: wangq1h
 date: 2023-02-12 20:52:00 +0800
-categories: [物理学中的几何方法]
+categories: [Geometric Method in Physics]
 tags: [张量]
-pin: true
+pin: false
 math: true
 mermaid: true
 ---
