--- a/_posts/2023-06-18-群表示论.md
+++ b/_posts/2023-06-18-群表示论.md
@@ -2,9 +2,9 @@
 title: 群表示论
 author: wangq1h
 date: 2023-2-2 23:28:00 +0800
-categories: [物理学中的几何方法]
+categories: [Geometric Method in Physics]
 tags: [群表示]
-pin: true
+pin: false
 math: true
 mermaid: true
 ---
