--- a/_posts/2024-12-13-向量空间的理论.md
+++ b/_posts/2024-12-13-向量空间的理论.md
@@ -17,7 +17,9 @@ mermaid: true
 
 如果有：
 $$
+\begin{align}
 \sum_{i=1}^sa_iv_i=0\Rightarrow a_i=0,i=1,2\dots s
+\end{align}
 $$
 则称其为线性无关的，否则是线性相关的。
 
@@ -25,8 +27,10 @@ $$
 
 域K上向量空间V的一个非空子集W，如果：
 $$
+\begin{align}
 \mathbb{W}+\mathbb{W}\subset \mathbb{W}\\
 \forall a\in\mathbb{K},a\mathbb{W}\subset\mathbb{W}
+\end{align}
 $$
 则称W是V的子空间。
 
@@ -36,94 +40,124 @@ $$
 
 **【定义】**如果若干空间的和空间：
 $$
-\mathbb{W}=\sum_{i=1}^n\mathbb{W}_i=\{\sum_{i=1}^n w_i|w_i\in\mathbb{W}_i \}
+\begin{align}
+\mathbb{W}=\sum_{i=1}^n\mathbb{W}_i={\sum_{i=1}^n w_i|w_i\in\mathbb{W}_i }
+\end{align}
 $$
 如果这个和空间里每一个元素的分解是唯一的，则称此时的加法运算为直和，分解为直和分解，子空间为直和因子。记为：
 $$
+\begin{align}
 \mathbb{W}=\sum_{i=1}^n\oplus\mathbb{W}_i
+\end{align}
 $$
 
 ## 商空间
 
 $$
+\begin{align}
 \forall v_1,v_2\in\mathbb{V},if~v_1-v_2\in\mathbb{W}\\
 then~v_1\sim v_2(\mod\mathbb{W})
+\end{align}
 $$
 
 所以所有与v相合的元素组成的相合类可以表示为：
 $$
+\begin{align}
 (v)=v+\mathbb{W}
+\end{align}
 $$
 同样地，引入商集合：
 $$
-\mathbb{V}/\mathbb{W}=\{(v)|v\in\mathbb{V} \}
+\begin{align}
+\mathbb{V}/\mathbb{W}={(v)|v\in\mathbb{V} }
+\end{align}
 $$
 根据向量等价的推广性，所有等价向量的等价类都是相同的。每一个等价类，都可以坍缩到了一个点上。
 
 在商集合中引入线性运算：
 $$
+\begin{align}
 (\vec{v}_1)+(\vec{v}_2)=(\vec{v}_1+\vec{v}_2)\\
 a(\vec{v})=(a\vec{v}),a\in\mathbb{K}
+\end{align}
 $$
 因此商集合构成了域K上的向量空间，称为商空间。
 
 商空间中的任一向量（也即向量空间V中的任一向量）v可以在向量空间的基下表示为：
 $$
+\begin{align}
 \vec{v}=\sum_{i=1}^na_i\vec{u}_i\\
 (v)=\sum_{i=1}^na_i(u_i)\\
 \because \vec{u}_i\in\mathbb{W},i=1,2\dots j\\
 \therefore \vec{u}_i-\vec{0}\in\mathbb{W}\therefore \vec{u}_i\sim\vec{0},(u_i)=(0),i=1,2\dots j
+\end{align}
 $$
 易证其他的基向量对应相合类是线性无关的。
 
 所以在有限维条件下，商空间有重要推论：
 $$
+\begin{align}
 \dim\mathbb{V}/\mathbb{W}=\dim\mathbb{V}-\dim\mathbb{W}
+\end{align}
 $$
 
 ## 线性映射  
 
 在同一个域上的不同线性空间之间建立映射。定义线性映射：
 $$
+\begin{align}
 \forall v,v_1,v_2\in\mathbb{V},a\in\mathbb{K},f:\mathbb{V}\rightarrow\mathbb{U}~satisfy\\
 f(v_1+v_2)=f(v_1)+f(v_2)\\
 f(av)=af(v)
+\end{align}
 $$
 线性映射的全体记为$Gl(\mathbb{V},\mathbb{U})$。在这个空间中定义线性运算：
 $$
+\begin{align}
 (f+g)(\mathbb{V})=f(\mathbb{V})+g(\mathbb{V})\\
 (af)(\mathbb{V})=af(\mathbb{V})
+\end{align}
 $$
 矩阵表示为一般线性矩阵群
 $$
+\begin{align}
 f,g\in GL(n,\mathbb{K})
+\end{align}
 $$
 
 ## 对偶空间
 
 对偶空间是一个同构于原向量空间的空间（一般而言）。首先定义线性泛函为：
 $$
+\begin{align}
 f:\mathbb{V}\rightarrow\mathbb{K},\forall a\in\mathbb{K},\vec{v}_1,\vec{v}_2\in\mathbb{V} \\
 f(\vec{v}_1+\vec{v}_2)=f(\vec{v}_1)+f(\vec{v}_2)\\
 f(a\vec{v})=af(\vec{v})
+\end{align}
 $$
 同上定义线性运算：
 $$
+\begin{align}
 (f+g)(\mathbb{V})=f(\mathbb{V})+g(\mathbb{V})\\
 (af)(\mathbb{V})=af(\mathbb{V})
+\end{align}
 $$
 我们称所有线性泛函的集合在这个线性运算下构成的空间为V的对偶空间。
 
 对偶空间的基定义为（$v_j$为向量空间的基）：
 $$
+\begin{align}
 \omega_i(v_j)=\delta_{i,j},i,j=1,2\dots n\\
+\end{align}
 $$
 proof：
 $$
+\begin{align}
 \omega_i(v)=\omega_i(a^jv_j)=a^j\omega_i(v_j)=a_i\\
 \forall v_j,j=1\dots n,\lambda_i\omega^i=0\\
 \lambda_i\omega^i(v_j)=\lambda_j\therefore\lambda_j=0\\
 \forall f\in\mathbb{V}^*,f=f(v_i)\omega^i
+\end{align}
 $$
 
 ## 不变子空间
@@ -132,22 +166,26 @@ $$
 
 不变子空间的应用是若尔当矩阵：
 $$
+\begin{align}
 if~v_1,v_2\dots v_n~is~basis~vectors~of~\mathbb{V}\\
 in~which~v_1,v_2\dots v_r~is~basis~vectors~of~\mathbb{W}\\
 then~f(v_j)=F_j^iv_i,i=1,2\dots n,j_{min}=r+1\\
-F=\pmatrix{F_1^1&F_2^1&\cdots&F_r^1&F_{r+1}^1&\cdots&F_n^1\\
+F=\begin{pmatrix}F_1^1&F_2^1&\cdots&F_r^1&F_{r+1}^1&\cdots&F_n^1\\
 F_1^2&F_2^2&\cdots&F_r^2&F_{r+1}^2&\cdots&F_n^2\\
 \vdots&\vdots&&\vdots&\vdots&&\vdots\\
 F_1^r&F_2^r&\cdots&F_r^r&F_{r+1}^r&\cdots&F_n^r\\
 &&&&F_{r+1}^{r+1}&\cdots&F_n^{r+1}\\
 &&0&&\vdots&&\vdots\\
 &&&&F_{r+1}^{n}&\cdots&F_n^{n}
-}\\
-=\pmatrix{F_1&*\\0&**}
+\end{pmatrix}\\
+=\begin{pmatrix}F_1&*\\0&**\end{pmatrix}
+\end{align}
 $$
 而如果原空间V可以表示为：
 $$
+\begin{align}
 \mathbb{V}=\sum_{i=1}^s\oplus\mathbb{W}_i
+\end{align}
 $$
 则显然可以表示为分块对角矩阵的形式。
 
@@ -163,13 +201,17 @@ $$
 
 **Schwarz不等式**
 $$
+\begin{align}
 <u,v>^2\le||u||^2||v||^2
+\end{align}
 $$
 **正交变换**
 
 正交变换的定义是满足下述关系的线性变换：
 $$
+\begin{align}
 <v_1,v_2>=<f(v_1),f(v_2)>
+\end{align}
 $$
 正交变换具有性质：
 
@@ -178,9 +220,11 @@ $$
 * 正交基映射为另一组正交基
 
 * 在正交基下的矩阵为正定矩阵
-  $$
-  <f(v_1),f(v_2)>=v_1^TF^TFv_2=<v_1,v_2>
-  $$
+$$
+\begin{align}
+<f(v_1),f(v_2)>=v_1^TF^TFv_2=<v_1,v_2>
+\end{align}
+$$
 
 * 矩阵特征值平方为1，由上一条显然推出
 
@@ -188,10 +232,12 @@ $$
 
 如字面意思所述，正交补空间是通过正交关系创造的相异子空间。其具有性质，不变子空间的正交补为不变子空间。
 $$
+\begin{align}
 \mathbb{E}'\subset \mathbb{E},\forall v\in\mathbb{E}',\exists v_1\in\mathbb{E}',f(v_1)=v\\
 \forall v_2\in\mathbb{E}'',<v_2,v_1>=0\\
 \because f~is~orthogonal\therefore <f(v_2),f(v_1)>=<f(v_2),v>=0\\
 \therefore f(v_2)\in\mathbb{E}''
+\end{align}
 $$
 
 ## 酉空间
@@ -204,7 +250,9 @@ $$
 
 正定变换相应变为酉变换，或称么正变换。而正交变换章节中的转置相应变为厄米共轭，记为：
 $$
+\begin{align}
 F^{\dagger}
+\end{align}
 $$
 
 ## 模与模理论
