--- a/_posts/2024-12-13-群的定义.md
+++ b/_posts/2024-12-13-群的定义.md
@@ -9,7 +9,7 @@ math: true
 mermaid: true
 ---
 
- # 群论基础
+# 群论基础
 
 ## 群的定义
 
@@ -17,10 +17,12 @@ mermaid: true
 
 **【群公理】**：封闭性，结合性，单位元，逆元。
 $$
+\begin{align}
 Closeness:\forall a,b\in G,a\cdot b\in G\\
 Association:\forall a,b,c\in G,a\cdot(b\cdot c)=(a\cdot b)\cdot c\\
 Identity:\exists e\in G,st~e\cdot a=a\cdot e=a\\
 Inverse:\forall a\in G,\exists a^{-1}\in G,st~a\cdot a^{-1}=a^{-1}\cdot a=e
+\end{align}
 $$
 阿贝尔群，亦称交换群，额外满足交换律。
 
@@ -30,14 +32,18 @@ $$
 
 **【定理2.2】**集合意义上$H\subset G$，H是子群的充要条件是：
 $$
+\begin{align}
 \forall a,b\in H\Rightarrow ab^{-1}\in H\\
 \forall a,b\in H\Rightarrow a^{-1}\in H,b^{-1}\in H\&ab\in H\\
+\end{align}
 $$
 ### 陪集
 
 **【定义】**H是群G的一个**子群**，a是G中的一个元素，则集合
 $$
-H_a=a\circ H=\{ax|x\in H\}
+\begin{align}
+H_a=a\circ H={ax|x\in H}
+\end{align}
 $$
 这被称为**H的**左陪集。同理可以做出右陪集。
 
@@ -50,18 +56,22 @@ $$
 * a也在陪集中
 
 * 设b属于H，则$H_b=H_a$
-  $$
-  \forall b\in H,\exists x\in H,st~b=ax\\
+ $$
+\begin{align}
+\forall b\in H,\exists x\in H,st~b=ax\\
   \therefore bH=axH,\because H~is~closed,\therefore xH=H
-  $$
+\end{align}
+$$
 
 * 任意两个陪集或者相等或者不相交
-  $$
-  \forall b\in H_a,bH=aH\\
+$$
+\begin{align}
+\forall b\in H_a,bH=aH\\
   \forall b\notin H_a,if~\exists x_1,x_2\in H,st~b\circ x_1=a\circ x_2\in H_a\\
   \therefore b=a\circ x_2\circ x_1^{-1},\because x_2,x_1^{-1}\in H\\
   \therefore b\in H_a, Contradiction
-  $$
+\end{align}
+$$
 
 其中满足第四条关系称为a和b有等价关系（显然陪集是一个等价类）。
 
@@ -69,14 +79,18 @@ $$
 
 **【Lagrange定理】**n是群G的元素个数，m是子群H的元素个数。
 $$
+\begin{align}
 n=(G:H)m
+\end{align}
 $$
 
 ### 共轭
 
 **【定义】**
 $$
+\begin{align}
 \forall a,b\in G,\exists g\in G,st~a=gbg^{-1}
+\end{align}
 $$
 则称a为b的共轭，或者说ab互为共轭。
 
@@ -89,19 +103,25 @@ $$
 
 原因是单位元和Abel群的元素都满足交换律。
 $$
-\forall a\in G,\forall b\in G\because ab=ba,\therefore a=bab^{-1}\therefore A_a=\{a\}
+\begin{align}
+\forall a\in G,\forall b\in G\because ab=ba,\therefore a=bab^{-1}\therefore A_a={a}
+\end{align}
 $$
 
 ### 不变子群和商群
 
 商集合的定义式为：
 $$
-G/H=\{H,a_1H,a_2H\dots\}
+\begin{align}
+G/H={H,a_1H,a_2H\dots}
+\end{align}
 $$
 一般而言，商集合都不是一个群。但子群H满足一定条件时，商集合就会成为商群。
 **【定义】** 不变子群（正规子群）的定义是：
 $$
+\begin{align}
 aH=Ha,\forall a\in G,h_j\in H,\exists h_k\in H,st~ah_j=h_ka
+\end{align}
 $$
 很显然，不变子群其实就是对共轭运算封闭的子群。
 **【定理】** 任意指数为2的子群均为不变子群。这只需要考虑到此时陪集只有H自身与另一个，所以左右陪集相同。
@@ -113,64 +133,84 @@ $$
 
 **【定理2.4】**如果选择不变子群为H，则以此构造的陪集等价类是一个商群。
 $$
+\begin{align}
 a_i H\circ a_j H=(a_i\circ a_j)H\\
 \forall h_i,h_j\in H,a_ih_iH\circ a_jh_jH=(a_ih_ia_jh_j)H\\
 =(a_ia_jh_kh_j)H,a_jh_k=h_ia_j,h_kh_j\in H\\
 \therefore=(a_ia_j)H
+\end{align}
 $$
 
 ## 同态和同构
 
 **【定义】**同态是指建立在两个群之间的一个映射f
 $$
+\begin{align}
 f:G\rightarrow G',\forall a,b\in G,f(a\circ b)=f(a)\circ f(b)
+\end{align}
 $$
 
 > 此处（书P19）的定义是谬误的，逗号应该删去或者换成“乘法”符号
 
 **【同构】**在同态的基础上，如果这个映射是一一对应的，则称为同构。记作
 $$
+\begin{align}
 G\cong G'
+\end{align}
 $$
 同构具有性质：将G中的单位元和逆元分别映射到G'中的单位元和逆元
 $$
+\begin{align}
 f(ae)=f(a)f(e)=f(a)\\
 f(e)=f(aa^{-1})=f(a)f(a^{-1})\therefore f(a)^{-1}=f(a^{-1})
+\end{align}
 $$
 
 ### 自同构群
 
 定义群G自同构上的乘法：$f_1\circ f_2$表示先二型自同构再一型自同构，所有自同构映射和这一运算即为G的自同构群，记为：
 $$
+\begin{align}
 A(G)~or~Aut(G)
+\end{align}
 $$
 对于同态映射，我们同样可以定义核和象：
 $$
-Im(f)=\{f(g)|g\in G\}\\
-Ker(f)=\{g|f(g)=f(e)=e',g\in G \}
+\begin{align}
+Im(f)={f(g)|g\in G}\\
+Ker(f)={g|f(g)=f(e)=e',g\in G }
+\end{align}
 $$
 **【定理2.5】**  $Im(f)$是G'的一个子群，这个由$Im(f)$和G是同构的就可以看出。$Ker(f)$是G的一个不变子群，这个事实可以由对共轭封闭看出：
 $$
+\begin{align}
 \forall x\in Ker(f),f(x)=e'\\
 \forall y\in G,f(yxy^{-1})=f(y)f(x)f(y^{-1})=f(y)f(y^{-1})=e'\\
 \therefore yxy^{-1}\in Ker(f)
+\end{align}
 $$
 自然得出第三个结论：$G/Ker(f)\cong Im(f)$
 
 并有同态是同构的充要条件：
 $$
+\begin{align}
 Ker(f)=e,Im(f)=G'
+\end{align}
 $$
 
 ### 同态的序列
 
 **【定义】**同态映射的序列是指对于两个映射和三个群，有如下关系：
 $$
+\begin{align}
 G_1\stackrel{f}{\longrightarrow}G_2\stackrel{g}{\longrightarrow}G_3
+\end{align}
 $$
 而正合的定义是$Im(f)=Ker(g)$，则称该序列在$G_2$处是正合的。其实可以（部分情况下）写为：
 $$
+\begin{align}
 g\circ f(G_1)=e_3=id
+\end{align}
 $$
 **【定理2.7】**
 
@@ -184,15 +224,19 @@ $$
 
 **【定义】**直积群的集合与运算定义为：
 $$
-G=G\times H=\{(g_1,g_2)|g_1\in G_1,g_2\in G_2\}\\
+\begin{align}
+G=G\times H={(g_1,g_2)|g_1\in G_1,g_2\in G_2}\\
 \forall g,h\in G,g\circ h=(g_1h_1,g_2h_2)
+\end{align}
 $$
 关于直积群分别保留了同构结构的说明：
 $$
-G_1'=\{(g_1,e_2)|g_1\in G_1\},G_2'=\{(e_1,g_2)|g_2\in G_2\}\\
+\begin{align}
+G_1'={(g_1,e_2)|g_1\in G_1},G_2'={(e_1,g_2)|g_2\in G_2}\\
 G/G_1'\cong G_2',G/G_2'\cong G_1'\\
 def~f:G_1\rightarrow G_1',Ker(f)=e_1,Im(f)=G_1'\\
 the~same~as~G_2'
+\end{align}
 $$
 直积群的共轭关系也在这一乘法定义中，可以自然的得到，直积群的共轭类数目是原群共轭类数目的乘积。
 
