--- a/_posts/2024-12-13-张量概述.md
+++ b/_posts/2024-12-13-张量概述.md
@@ -15,49 +15,65 @@ mermaid: true
 
 SO(2)群是由二维平面上所有的定点转动构成的全体。不妨定义为：
 $$
-SO(2)=\{R_z(\theta)|0\le\theta\le2\pi \}
+\begin{align}
+SO(2)={R_z(\theta)|0\le\theta\le2\pi }
+\end{align}
 $$
 $R_z(\theta)$是使得向量$r=xi+yj$逆时针旋转$\theta$角的变换。
 
 描述这个变换有两种方法，一种是认为在定系中的旋转，另一种则是认为是基的旋转。我们采取后一种（另一种表述其实就是$\theta\rightarrow-\theta$，用矩阵符号表示为：
 $$
-R_z(\theta)=\pmatrix{\cos{\theta}&\sin{\theta}\\-\sin{\theta}&\cos{\theta}}
+\begin{align}
+R_z(\theta)=\begin{pmatrix}\cos{\theta}&\sin{\theta}\\-\sin{\theta}&\cos{\theta}\end{pmatrix}
+\end{align}
 $$
 
 ## SO(2)群的张量
 
 首先建立一阶张量，即向量。
 $$
+\begin{align}
 \vec{A}=a_1\hat{i}+a_2\hat{j},\vec{B}=b_1\hat{i}+b_2\hat{j}
+\end{align}
 $$
 二阶张量用T表示，其通过一阶张量的张量积构造：
 $$
+\begin{align}
 T=\vec{A}\otimes\vec{B},T_{lm}=a_lb_m
+\end{align}
 $$
 在物理中，这个张量也称为**并矢**。 
 
 在另一个系$\hat{i}',\hat{j}'$系中，借用第1节中的推导：
 $$
+\begin{align}
 \vec{A}'=R_z(\theta)\vec{A},\vec{B}'=R_z(\theta)\vec{B}\\
-\vec{A}'\otimes\vec{B}'=\{a_1'\vec{B}',a_2'\vec{B}' \}\\
-=\{a_1'R_z(\theta)\vec{B},a_2'R_z(\theta)\vec{B} \}\\
-=R_z(\theta)\{a_1'\vec{B},a_2'\vec{B} \}\\
+\vec{A}'\otimes\vec{B}'={a_1'\vec{B}',a_2'\vec{B}' }\\
+={a_1'R_z(\theta)\vec{B},a_2'R_z(\theta)\vec{B} }\\
+=R_z(\theta){a_1'\vec{B},a_2'\vec{B} }\\
 =R_z(\theta)(R_z(\theta)A)\otimes B\\
 =(R_z(\theta)\otimes R_z(\theta))(A\otimes B)
+\end{align}
 $$
 **【定义】**如果一个客观量在$(\hat{i},\hat{j})$和$(\hat{i}',\hat{j}')$​分别为T和T'，且满足
 $$
+\begin{align}
 T'=(R_z(\theta)\otimes R_z(\theta))T
+\end{align}
 $$
 则称T为SO(2)群下的二阶张量。
 
 对于任意n阶张量，在二维系里的分量具有形式：
 $$
-T_{i_1i_2\dots i_n},i_j\in\{1,2 \}
+\begin{align}
+T_{i_1i_2\dots i_n},i_j\in{1,2 }
+\end{align}
 $$
 如果在两坐标系之间存在等式
 $$
+\begin{align}
 T'=\prod_i^n\otimes R_z(\theta)T
+\end{align}
 $$
 则称T为SO(2)群下的n阶张量。    
 
@@ -67,17 +83,23 @@ $$
 
 则坐标变换矩阵为：
 $$
-\gamma_{ij}=\pmatrix{\cos{\alpha_1}&\cos{\beta_1}&\cos{\gamma_1}\\
+\begin{align}
+\gamma_{ij}=\begin{pmatrix}\cos{\alpha_1}&\cos{\beta_1}&\cos{\gamma_1}\\
 \cos{\alpha_2}&\cos{\beta_2}&\cos{\gamma_2}\\
-\cos{\alpha_3}&\cos{\beta_3}&\cos{\gamma_3}}
+\cos{\alpha_3}&\cos{\beta_3}&\cos{\gamma_3}\end{pmatrix}
+\end{align}
 $$
 那么具有$3^n$个分量的n阶张量，其属于SO(3)群的条件为：
 $$
+\begin{align}
 T'=\prod_i^n\otimes \gamma_{ij}T
+\end{align}
 $$
 值得注意的是：
 $$
+\begin{align}
 \gamma_{ij}\gamma_{ij}^T=I
+\end{align}
 $$
 
 
@@ -85,35 +107,42 @@ $$
 
 **【定义】**三维空间中的惯性张量是一个二阶张量，其定义为：
 $$
+\begin{align}
 J=\sum_im_i(|r_i|^2I-r_i\otimes r_i)
+\end{align}
 $$
 其中I为二阶常值张量，即单位阵。
 
 立即得到惯性张量的矩阵形式：
 $$
-J=\pmatrix{
+\begin{align}
+J=\begin{pmatrix}
 \sum_im_i(y_i^2+z_i^2)&-\sum_im_ix_iy_i&-\sum_im_iz_ix_i\\
 -\sum_im_ix_iy_i&\sum_im_i(x_i^2+z_i^2)&-\sum_im_iy_iz_i\\
 -\sum_im_iz_ix_i&-\sum_im_iy_iz_i&\sum_im_i(x_i^2+y_i^2)
-}
+\end{pmatrix}
+\end{align}
 $$
   **【证明】**
 $$
+\begin{align}
 (A\otimes B)C_{4\times1}\Leftrightarrow AC_{2\times2}B^T
+\end{align}
 $$
 （读者自证不难）
 
 由于物理定律的要求，角动量对于参考系变换是**协变**的。这可以由惯性张量和角动量张量积对基变换的协变性看出：
 $$
+\begin{align}
 L'=\gamma_{ij}L
 =\gamma_{ij}J\Omega
 =\gamma_{ij}J\gamma_{ij}^T\gamma_{ij}\Omega
 =J'\Omega'
+\end{align}
 $$
 
 ## O(3)群的张量
-
-     ### 真向量和赝向量
+### 真向量和赝向量
 
 一般的向量$\vec{v_1}$和$\vec{v_2}$在反演变换中坐标变为相反数，但其叉积对于反演变换是不变的。前者称为真向量，后者称为赝向量。
 
@@ -121,7 +150,9 @@ $$
 
 在转动的基础上扩大变换群，使之对反演变换也封闭，就是O(3)群。O(3)群实际上就是正交群，定义为：
 $$
-O(3)=\{O|O\in GL(3,\mathbb{R}),O^TO=E \}
+\begin{align}
+O(3)={O|O\in GL(3,\mathbb{R}),O^TO=E }
+\end{align}
 $$
 该群具有两种表示：
 
@@ -129,7 +160,9 @@ $$
 
 如果一阶张量（三维向量）是按下面的规则（自然表示）变换：
 $$
+\begin{align}
 T'=(O_{ij})T
+\end{align}
 $$
 则其被称为真向量。
 
@@ -137,7 +170,9 @@ $$
 
 如果一阶张量（三维向量）是按下面的规则（自然表示）变换：
 $$
+\begin{align}
 T'=\det(O_{ij})(O_{ij})T
+\end{align}
 $$
 则其被称为赝向量。
 
@@ -147,36 +182,46 @@ $$
 
 在时空坐标系中，定义坐标：
 $$
+\begin{align}
 x_1=x,x_2=y,x_3=z,x_4=ict
+\end{align}
 $$
 由于狭义相对论光速不变的保证，有任意参考系中：
 $$
+\begin{align}
 x^2+y^2+z^2-c^2t^2=constant
+\end{align}
 $$
 相当于我们之前定义的四维向量模长不变。因此立即得到这个空间，定义为Minkowski空间中的变换为一种特殊的酉变换——Lorentz变换。
 $$
-L=\{L_{ij}|L_{ij}\in GL(4,\mathbb{C}),L_{ij}^TL_{ij}=E,L_{ij}|_{i,j\le3\and i=i=4} \in\mathbb{R},L_{i4}\and L_{4j}\in i\mathbb{R} \}
+\begin{align}
+L={L_{ij}|L_{ij}\in GL(4,\mathbb{C}),L_{ij}^TL_{ij}=E,L_{ij}|_{i,j\le3\and i=i=4} \in\mathbb{R},L_{i4}\and L_{4j}\in i\mathbb{R} }
+\end{align}
 $$
 
 ## 齐次Lorentz群的张量
 
 从第六节中的齐次洛伦兹群的自然表示中可以构造张量。而一种特殊的洛伦兹变换的矩阵形式为：
 $$
-\pmatrix{O_{ij}&0\\0&1}
+\begin{align}
+\begin{pmatrix}O_{ij}&0\\0&1\end{pmatrix}
+\end{align}
 $$
 这对应绝对时空观，或者说无相对速度参考系之间的变换。
 
 在这种变换中的四维二阶张量的变换满足：
 $$
-T'=(L_{\mu\nu})T(L_{\mu\nu})^T,(L_{\mu\nu})=\pmatrix{(O_{ij})&0\\0&1} \\
-\pmatrix{T_{11}'&T_{12}'&T_{13}'\\
+\begin{align}
+T'=(L_{\mu\nu})T(L_{\mu\nu})^T,(L_{\mu\nu})=\begin{pmatrix}(O_{ij})&0\\0&1\end{pmatrix} \\
+\begin{pmatrix}T_{11}'&T_{12}'&T_{13}'\\
 T_{21}'&T_{22}'&T_{23}'\\
-T_{31}'&T_{32}'&T_{33}'}=(O_{ij})\pmatrix{T_{11}&T_{12}&T_{13}\\
+T_{31}'&T_{32}'&T_{33}'\end{pmatrix}=(O_{ij})\begin{pmatrix}T_{11}&T_{12}&T_{13}\\
 T_{21}&T_{22}&T_{23}\\
-T_{31}&T_{32}&T_{33}}(O_{ij})^T\\
-\pmatrix{T_{14}'\\T_{24}'\\T_{34}'}=(O_{ij})\pmatrix{T_{14}\\T_{24}\\T_{34}}\\
-\pmatrix{T_{41}'&T_{42}'&T_{43}'}=\pmatrix{T_{41}&T_{42}&T_{43}}(O_{ij})^T\\
+T_{31}&T_{32}&T_{33}\end{pmatrix}(O_{ij})^T\\
+\begin{pmatrix}T_{14}'\\T_{24}'\\T_{34}'\end{pmatrix}=(O_{ij})\begin{pmatrix}T_{14}\\T_{24}\\T_{34}\end{pmatrix}\\
+\begin{pmatrix}T_{41}'&T_{42}'&T_{43}'\end{pmatrix}=\begin{pmatrix}T_{41}&T_{42}&T_{43}\end{pmatrix}(O_{ij})^T\\
 T'_{44}=T_{44}
+\end{align}
 $$
 所以从三维空间来看，4维2阶张量是由一个3维2阶张量，两个3维向量和一个三维标量组成。
 
@@ -186,48 +231,66 @@ $$
 
 真空中的Maxwell方程组的形式为：
 $$
-\nabla\times B=\mu_0\varepsilon_0\frac{\part E}{\part t}+\mu_0j\\
-\nabla \times E=-\frac{\part B}{\part t}\\
+\begin{align}
+\nabla\times B=\mu_0\varepsilon_0\frac{\partial E}{\partial t}+\mu_0j\\
+\nabla \times E=-\frac{\partial B}{\partial t}\\
 \nabla\cdot B=0\\
 \nabla\cdot E=\frac{\rho}{\varepsilon_0}
+\end{align}
 $$
 构造电磁场张量：
 $$
+\begin{align}
 F=(F_{\mu\nu})=\pmatrix{0&B_z&-B_y&-\frac icE_x\\
 -B_z&0&B_x&-\frac icE_y\\
 B_y&-B_x&0&-\frac icE_z\\
 \frac icE_x&\frac icE_y&\frac icE_z&0}=
 \pmatrix{\mathbf{B}&\mathbf{-E}\\
 \mathbf{E}&0}
+\end{align}
 $$
 同时我们观察到，由于体积的洛伦兹收缩：
 $$
+\begin{align}
 V=\frac1{\gamma}V_0
+\end{align}
 $$
 所以有体电荷密度：
 $$
+\begin{align}
 \rho=\gamma\rho_0,J=\gamma\rho_0u
+\end{align}
 $$
 由于：
 $$
+\begin{align}
 -(c\rho)^2+J^2=-\rho_0^2c^2
+\end{align}
 $$
 所以构造Minkowski空间中的四维矢量：
 $$
+\begin{align}
 J^{\mu}=(j_x,j_y,j_z,ic\rho)
+\end{align}
 $$
 立即可以改写Maxwell方程为：
 $$
-\part_{\nu}F^{\mu\nu}=\mu_0J^{\mu}\\
-\part_{\lambda}F^{\mu\nu}+\part_{\mu}F^{\nu\lambda}+\part_{\nu}F_{\lambda\mu}=0
+\begin{align}
+\partial_{\nu}F^{\mu\nu}=\mu_0J^{\mu}\\
+\partial_{\lambda}F^{\mu\nu}+\partial_{\mu}F^{\nu\lambda}+\partial_{\nu}F_{\lambda\mu}=0
+\end{align}
 $$
 如果改写电磁场张量为其对偶张量$G^{\mu\nu}$还可以方便地改写第二条公式为：
 $$
-\part_{\nu}G^{\mu\nu}=0
+\begin{align}
+\partial_{\nu}G^{\mu\nu}=0
+\end{align}
 $$
 在Minkowski空间中变换时，电磁场张量的变换规律遵从洛伦兹变换：
 $$
+\begin{align}
 (F_{\mu\nu}')=(L_{\mu\nu})(F_{\mu\nu})(L_{\mu\nu})^T
+\end{align}
 $$
 
 ## 四维不变量
@@ -237,13 +300,17 @@ $$
 * 迹不变：酉相似变换保迹
 
 * 行列式不变：洛伦兹变换保模，我们可以得到Poynting矢量：
-  $$
-  |(F_{\mu\nu})|=-\frac1{c^2}(\mathbf{E}\cdot\mathbf{B})^2
-  $$
+$$
+\begin{align}
+|(F_{\mu\nu})|=-\frac1{c^2}(\mathbf{E}\cdot\mathbf{B})^2
+\end{align}
+$$
 
 * 张量$T\otimes T$的（二次）缩并是一个不变量，应用到电磁场张量上，可以得到
-  $$
-  c^2\mathbf{B}^2-\mathbf{E}^2=const
-  $$
+$$
+\begin{align}
+c^2\mathbf{B}^2-\mathbf{E}^2=const
+\end{align}
+$$
 
   > 注意到迹实际上就是原张量的一次缩并
