--- a/_posts/2024-12-13-线性群的张量.md
+++ b/_posts/2024-12-13-线性群的张量.md
@@ -17,6 +17,8 @@ mermaid: true
 
 线性空间内基的变换，由于需要保证维数不减，因此保秩有逆。因此我们称所有基变换的群，也称一般线性群，是可逆矩阵的群
 $$
+\begin{align}
 GL(n,\mathbb{K})
+\end{align}
 $$
-基$\{v_i \}$负载了这个群的自然表示，也就是矩阵表示。
+基${v_i }$负载了这个群的自然表示，也就是矩阵表示。
