--- a/_posts/2024-12-13-集合论基础.md
+++ b/_posts/2024-12-13-集合论基础.md
@@ -26,17 +26,23 @@ mermaid: true
 
 吸收律：
 $$
+\begin{align}
 (A\cup B)\cap A=A\\
 (A\cap B)\cup A=A
+\end{align}
 $$
 $De~Morgan$：
 $$
+\begin{align}
 (A\cup B)^{\complement}=A^{\complement}\cap B^{\complement}\\
 (A\cap B)^{\complement}=A^{\complement}\cup B^{\complement}\\
+\end{align}
 $$
 直积运算/笛卡尔乘积：
 $$
-C=A\times B=\{(a,b)|a\in A,b\in B\}
+\begin{align}
+C=A\times B={(a,b)|a\in A,b\in B}
+\end{align}
 $$
 
 ## 映射
@@ -51,18 +57,22 @@ proof:
 
 先证明$A\times B$是可数集，等价证明$\mathbb{Z}^+\times\mathbb{Z}^+$是可数集。
 $$
+\begin{align}
 def~f(n,m)=2^n5^m\\
 if~\exists p,q,st~f(n,m)=f(p,q)\\
 2^n5^m=2^p5^q\\
 if~n<p,5^m=2^{p-n}5^q,5^mmod2\equiv1\neq2^{p-n}5^q\equiv0\\
 if~n>p,5^q=2^{n-p}5^m,the~same~as~above,\therefore p=n\\
 Thus~m=q
+\end{align}
 $$
 接下来进一步证明可数个可数集$A_i$的并集也是可数集
 $$
+\begin{align}
 def~f_i:\mathbb{Z}^+\rightarrow A_i,g:\mathbb{Z}^+\rightarrow\mathbb{N} \\
 def~h(n,m)f_{g(n)}(m)\\
 \therefore h:\mathbb{Z}^+\times\mathbb{Z}^+\rightarrow \cup_{i\in \mathbb{N}}A_i
+\end{align}
 $$
 由前推论可得证。
 
@@ -96,19 +106,25 @@ proof:
 
 分类$\Rightarrow$等价关系是易证的，参见书P8。下证等价关系$\Rightarrow$分类
 $$
+\begin{align}
 def~\sim~is~an~equivalence~relation\\
-for~a\in X,A_a=\{b|b\in X\&b\sim a\}\\
+for~a\in X,A_a={b|b\in X\&b\sim a}\\
 \because reflection:a\in A_a\\
 \because transitivity,\therefore \forall c\notin A_a,a\nsim c
+\end{align}
 $$
 **商集合**：由一个等价关系确定的分类中，类的集合。
 $$
-u=X/\sim=\{A_a|a\in X\}
+\begin{align}
+u=X/\sim={A_a|a\in X}
+\end{align}
 $$
 **【同余关系确定的集合】**同余关系显然是一个等价关系，这个关系确定的等价类称为剩余类。
 $$
-\forall a\in X,A_a=\{b|b\in X\&b~mod~m\equiv a\}\\
+\begin{align}
+\forall a\in X,A_a={b|b\in X\&b~mod~m\equiv a}\\
 b=a+km,k\in\mathbb{Z}
+\end{align}
 $$
 记$A_a$为$\bar{a}$，显然有$\bar{a}=\overline{a+km},k\in\mathbb{Z}$。
 
@@ -122,7 +138,9 @@ $$
 
 **【定理1.5】**
 $$
+\begin{align}
 \forall f:X\rightarrow Y,\exist g,h,st~f=g\circ h,\\
 h:X\rightarrow X/Ker(f),g:X/Ker(f)\rightarrow f(X)
+\end{align}
 $$
 这是因为$g(A_a)=f(a)$。比如说对于矩阵A定义的线性映射，核一般指$Ax=0$构成的空间，对于这个空间而言，可以取一个元素代表整个空间，因为它们的象是重合唯一的。
