--- a/_posts/2024-12-16-群表示论.md
+++ b/_posts/2024-12-16-群表示论.md
@@ -16,14 +16,17 @@ mermaid: true
 群表示的目的是用矩阵表示抽象的群的概念。
 
 **【定义】**设G是一个抽象群，若存在一个同态映射
+
 $$
 \begin{align}
 \rho:\mathbb{G}\rightarrow GL(\mathbb{V})
 \end{align}
 $$
+
 则称${\rho(a)|\forall a\in\mathbb{G} }\in GL(\mathbb{V})$为群G的一个线性表示，若映射是单射的，则称为**忠实表示**。这个向量空间被称为表示空间，向量空间的维数被称为表示的维数。
 
 不难证明的是：
+
 $$
 \begin{align}
 a\rightarrow \rho(a)\rightarrow D(a),b\rightarrow \rho(b)\rightarrow D(b)\\
@@ -31,19 +34,23 @@ D(ab)=D(a)D(b),D(a^{-1})=D(a)^{-1},D(e)=E
 \end{align}
 $$
 
+
 ## 可约表示和完全可约表示
 
 可约表示的目的是选取合适的基，使得矩阵的形式尽可能简单。
 
 **【定义】**V的一个子空间V'，如果：
+
 $$
 \begin{align}
 \forall a\in\mathbb{G},\rho(a)\mathbb{V}'\subset\mathbb{V}'
 \end{align}
 $$
+
 则称此时的群表示为一个可约表示。
 
 套用之前不变子空间里的讨论，我们立即知道可约表示空间总可以写成不变子空间和相异空间的和。而**当且仅当补空间为不变子空间时，为直和补**。更普遍地写为：
+
 $$
 \begin{align}
 \mathbb{V}=\sum_{i=1}^n\oplus\mathbb{V}_i,\mathbb{V}_i~is~invariant\\
@@ -51,6 +58,7 @@ $$
 D(a)=\sum_{i=1}^n\oplus D_i(a),D_i(a)=\rho(a)|_{\mathbb{V}_i}
 \end{align}
 $$
+
 如果上述分解完成，则称为**完全可约表示**（既约表示） 。
 
 > 多说一句，从矩阵的角度理解，不变子空间对应Jordan块。因此可约表示含多个完整不变子空间，其矩阵就含有多个Jordan块对应区块。既约表示反之。
@@ -60,6 +68,7 @@ $$
 **【定理5.1】**有限群G的任意表示$\rho$都可以看成是酉表示。
 
 proof:
+
 $$
 \begin{align}
 def~<v_1,v_2>_{\rho}=\sum_{\forall a\in\mathbb{G}}<\rho(a)v_1,\rho(a)v_2>\\
@@ -68,11 +77,13 @@ def~<v_1,v_2>_{\rho}=\sum_{\forall a\in\mathbb{G}}<\rho(a)v_1,\rho(a)v_2>\\
 =<v_1,v_2>_{\rho}
 \end{align}
 $$
+
 这里前提是求和是有限维度的。所以命题得证。
 
 ## 矩阵的张量积与张量积空间中的变换
 
 张量积的定义为：
+
 $$
 \begin{align}
 A\in GL(n,\mathbb{C}),B\in GL(m,\mathbb{C})\\
@@ -90,7 +101,9 @@ a_{21}B&a_{22}B&\cdots&a_{2n}B\\
 a_{n1}B&a_{n2}B&\cdots&a_{nn}B\end{pmatrix}
 \end{align}
 $$
+
 张量积具有如下关系：
+
 $$
 \begin{align}
 (1)A\otimes(B\otimes C)=(A\otimes B)\otimes C\\
@@ -100,7 +113,9 @@ $$
 (5)(A_1\otimes B_1)(A_2\otimes B_2)=(A_1A_2)\otimes(B_1B_2)
 \end{align}
 $$
+
 **张量积空间**：两个向量空间张量积定义为：
+
 $$
 \begin{align}
 v_i~is~the~basis~of~\mathbb{V}_{n\times n},u_i~is~the~basis~of~\mathbb{U}_{m\times m}\\
@@ -108,6 +123,7 @@ then~the~basis~of~\mathbb{V}\times\mathbb{U}~is~v_i\otimes u_i\\
 v_i\otimes u_i={v_iu_j }
 \end{align}
 $$
+
 **表示的张量积**：同态映射$\rho$在${v_i\otimes u_j }$中的表示矩阵为原矩阵的向量积。
 
 ## 群表示论中的一些重要定理
@@ -117,6 +133,7 @@ $$
 如果矩阵A与群G的一个n维既约酉矩阵表示D中的每一个矩阵均可对易。则A一定是一个单位矩阵的常数倍。
 
 proof:
+
 $$
 \begin{align}
 \because D(a)A=AD(a)\therefore D(a^{-1})A=AD(a^{-1})\\
@@ -126,7 +143,9 @@ def~H=A+A^{\dagger},then~D(a)H=HD(a)\\
 \because H~is~hermite,\exists S,S^{\dagger}=S^{-1},\Lambda=S^{-1}HS
 \end{align}
 $$
+
 下证对角矩阵$\Lambda$为单位阵的倍数（特征值完全简并）：
+
 $$
 \begin{align}
 \because D(a)H=HD(a)\therefore S^{-1}D(a)HS=S^{-1}HD(a)S\\
@@ -141,17 +160,21 @@ the~same~,J=i(A+A^{\dagger})=dE\\
 \end{align}
 $$
 
+
 **【大Schur引理】**设$D^{(1)}$和$D^{(2)}$分别为G的$l_{1}$和$l_{2}$维的两个不可约表示，若有$l_1\times l_2$阶矩阵M满足以下关系：
+
 $$
 \begin{align}
 D^{(1)}(g)M=MD^{(2)}(g),\forall g\in\mathbb{G}
 \end{align}
 $$
+
 则有：当$l_1=l_2$时，$M=0$或$M\neq0,D^{(1)}\cong D^{(2)}$
 
 当$l_1\neq l_2$时，$M=0$
 
 proof:
+
 $$
 \begin{align}
 Conjugate~the~equation\\
@@ -160,33 +183,42 @@ M^{\dagger}D^{(1)}(g^{-1})M=D^{(2)}(g^{-1})M^{\dagger}M,\because D^{(1)}(g^{-1})
 \therefore M^{\dagger}MD^{(2)}(g^{-1})=D^{(2)}(g^{-1})M^{\dagger}M
 \end{align}
 $$
+
 由小Schur引理，得到：
+
 $$
 \begin{align}
 M^{\dagger}M=\lambda E
 \end{align}
 $$
+
 分类讨论：
 
 $l_1=l_2=n$
+
 $$
 \begin{align}
 \lambda\neq0,\det M\neq0,D^{(1)}(g)=MD^{(2)}(g)M^{-1}
 \end{align}
 $$
+
 则两种表示等价。
+
 $$
 \begin{align}
 \lambda =0,M=0
 \end{align}
 $$
+
 $l_1\neq l_2$​
+
 $$
 \begin{align}
 def~l_1< l_2,M'=\begin{pmatrix}M\\0\end{pmatrix},M'^{\dagger}M'=M^{\dagger}M=\lambda E\\
 \because \det M'=0\therefore \lambda=0\therefore \det M=0\therefore M=0
 \end{align}
 $$
+
 这里略有跳步。
 
 ### 波函数和群
@@ -194,12 +226,15 @@ $$
 #### 群的正交性定理
 
 **【定理】**设$D^{(\alpha)}$和$D^{(\beta)}$分别为G的$l_{\alpha}$和$l_{\beta}$维的两个不可约表示，则有等式：
+
 $$
 \begin{align}
 \sum_{g\in\mathbb{G}}D_{il}^{(\alpha)}(g)D_{jm}^{(\beta)^*}(g)=\frac{N}{l_{\alpha}}\delta_{\alpha\beta}\delta_{ij}\delta_{lm}
 \end{align}
 $$
+
 proof:
+
 $$
 \begin{align}
 def~M=\frac{1}{N}\sum_{g\in\mathbb{G}}D^{(\alpha)}(g)XD^{(\beta)}(g^{-1})\\
@@ -210,13 +245,16 @@ D^{(\alpha)}(g_i)M=\frac{1}{N}D^{(\alpha)}(g_i)\sum_{g\in\mathbb{G}}D^{(\alpha)}
 =MD^{(\beta)}(g_i)
 \end{align}
 $$
+
 由Schur引理就可知：
+
 $$
 \begin{align}
 \alpha\neq\beta,M=0\\
 \alpha =\beta, M=\lambda E
 \end{align}
 $$
+
 其余对指数不证。
 
 #### 波函数和群的表示
@@ -224,33 +262,42 @@ $$
 我们首先建立量子力学和群表示的关系。离散情况为矩阵运算，连续情况求和过渡到积分。
 
 设$l_i$维空间中有一组完备本征态$\ket{\psi_n^{(i)}}$，则算符$\hat{B}$的矩阵表示为：
+
 $$
 \begin{align}
 \hat{B}\ket{\phi_j^{(i)}}=\sum^n\ket{\psi_n^{(i)}}\bra{\psi_n^{(i)}}\hat{B}\ket{\psi_j^{(i)}}\\=\sum^n\bra{\psi_n^{(i)}}\hat{B}\ket{\psi_j^{(i)}}\ket{\psi_n^{(i)}}=\sum^n\hat{B}^{(i)}_{nj}\ket{\ket{\psi_n^{(i)}}}
 \end{align}
 $$
+
 因此，如果假定波函数组负载了群G的$l_i$维既约表述$\rho^{(i)}$的酉矩阵表示$D^{(i)}$，则有：
+
 $$
 \begin{align}
 \rho^{(i)}(a)\psi_j^{(i)}=\sum_nD_{nj}^{(i)}(a)\psi_n^{(i)}
 \end{align}
 $$
+
 为了方便下面的定理的理解。所以假设有另一个$l_j$维空间，并具有另一组波函数来负载：
+
 $$
 \begin{align}
 \rho^{(j)}(a)\phi_k^{(j)}=\sum_nD_{nk}^{(j)}(a)\phi_n^{(j)}
 \end{align}
 $$
 
+
 #### 波函数的正交定理
 
 **【定理】**在上述符号下，我们有：
+
 $$
 \begin{align}
 \int{\psi_{\alpha}^{(i)*}\phi_{\beta}^{(j)}\mathrm d\tau}=\lambda\delta_{ij}\delta_{\alpha\beta}
 \end{align}
 $$
+
 proof:
+
 $$
 \begin{align}
 def~B_{\alpha\beta}=\int{\psi_{\alpha}^{(i)*}\phi_{\beta}^{(j)}\mathrm d\tau}\\
@@ -265,6 +312,7 @@ D^{(i)}(a)B_{\alpha\zeta}=\sum_{\beta}D^{(i)}(a)_{\alpha\beta}B_{\beta\zeta}=\su
 \therefore D^{(i)}(a)B=BD^{(j)}(a)
 \end{align}
 $$
+
 紧接着由群表示的正交定理即得。
 
 > 这里我证明的简直依托答辩，但暂时不想改了。正确的思路是用算符表示，借助酉表示的线性运算证明。
@@ -272,52 +320,65 @@ $$
 ### 有限群的表示的其他定理
 
 * 群G的不等价既约表示个数等于群G中共轭类的个数m。这其实由上面正交定理可以看出，同一维数的空间下的表示一定互为共轭。共轭类等价于对更大空间的一个直和分解
+
 $$
 \begin{align}
 \rho=\sum_i\oplus a_i\rho^{i}
 \end{align}
 $$
+
   
 * 设n是群G的阶，$l_i$是上述共轭类i的空间维数。有等式：
+
 $$
 \begin{align}
 n=\sum_il_i^2
 \end{align}
 $$
 
+
 ### 特征标
 
 考察迹运算
+
 $$
 \begin{align}
 \mathrm{tr}（AB）=\sum_{k=1}^{n}{\sum_{i=1}^{n}x_{ki}y_{ik}}=\sum_{i=1}^{n}\sum_{k=1}^{n}{y_{ik}}{x_{ki}}=tr(BA)
 \end{align}
 $$
+
 这说明迹运算内的矩阵乘法是可交换的。我们立即得到迹的相似（共轭）不变性：
+
 $$
 \begin{align}
 \mathrm{tr}（P^{-1}AP）=\mathrm{tr}(APP^{-1}) =\mathrm{tr}(A)
 \end{align}
 $$
+
 我们立即想到可以用这个对共轭的不变量来表征共轭类，以及更重要的既约表示。
 
 **【定义】**群表示的迹定义为：
+
 $$
 \begin{align}
 \chi(a_i)=\mathrm{tr} D(a_i),a_i\in\mathbb{G}
 \end{align}
 $$
+
 称之为群表示的特征标。如果是可约表示，称特征标是复合的。如果是既约表示，称之为单纯的。
 
 #### 单纯特征标的正交定理
 
 n阶群G中，有：
+
 $$
 \begin{align}
 \frac1n\sum_{g\in\mathbb{G}}\chi^{(i)}(g)\bar{\chi}^{(j)}(g)=\delta_{ij}
 \end{align}
 $$
+
 proof:
+
 $$
 \begin{align}
 \sum_{g\in\mathbb{G}}D_{il}^{(\alpha)}(g)D_{jm}^{(\beta)^*}(g)=\frac{n}{l_{\alpha}}\delta_{\alpha\beta}\delta_{ij}\delta_{lm}\\
@@ -327,57 +388,69 @@ $$
 \sum_{g\in\mathbb{G}}\chi^{(\alpha)}(g)\bar\chi^{(\beta)}(g)=\sum_{i,j}\frac{n}{l_{\alpha}}\delta_{\alpha\beta}\delta_{ij}^2=n\delta_{\alpha\beta}\\
 \end{align}
 $$
+
 有了正交定理，我们就可以断言，区别既约表述的方法就是看特征标的区别。并且可以做出在5.3节的第一个分解，其中系数：
+
 $$
 \begin{align}
 a_i=\frac1n\sum_{a\in\mathbb{G}}\chi(a)\bar\chi^{(i)}(a)
 \end{align}
 $$
 
+
 #### 既约判据
 
 如果一个表示是既约的，则其特征标具有性质：
+
 $$
 \begin{align}
 \sum_{a\in\mathbb{G}}\bar\chi(a)\chi(a)=n
 \end{align}
 $$
+
 这是因为：
+
 $$
 \begin{align}
 \sum_{a\in\mathbb{G}}\bar\chi(a)\chi(a)=n\sum_ia_i^2
 \end{align}
 $$
+
 而如果为既约表示，则必定存在一个数j使得$a_i=\delta_{ij}$。
 
 #### 群的直积表示
 
 由直积的定义快速得出
+
 $$
 \begin{align}
 \chi_{1\otimes2}=\mathrm{tr} \rho_1\otimes\rho_2=\mathrm{tr} D_1\otimes D_2=\sum_iD_{1_{ii}}\sum_jD_{2_{jj}}=\chi_1\chi_2
 \end{align}
 $$
+
 类似之前的，可以证明原群表示的既约表示集的直积就是直积表示的完备正交基。因此直积表示的相等和正交都由正交基决定。    
 
 ## 正则表示
 
 **【定义】**（左）正则表示定义为：
+
 $$
 \begin{align}
 \sigma:g\rightarrow\sigma(g),st\\
 \sigma(g)\sum_ia_ig_i=\sum_ia_igg_i
 \end{align}
 $$
+
 由于$gg_i\in\mathbb{G}$所以这个运算对群空间是封闭的。定义自然的加法和矩阵类的次序乘法后，这个表示就构成了群到群空间上的一个映射，称为（左）正则表示。
 
 > 正则表示实际上就是以群空间为表示空间，群元作为算符的表示。这就是其特殊性。
 
 考察其矩阵形式：
+
 $$
 \begin{align}
 \sigma(g)g_k=gg_k=\sum_jD_{jk}(g)g_j\\
-D_{jk}(g)=\left\{
+D_{jk}(g)=\left{
 \begin{aligned}
 1~~~g=g_jg_k^{-1}\\
 0~~~g\neq g_jg_k^{-1}
@@ -385,10 +458,12 @@ D_{jk}(g)=\left\{
 \right.
 \end{align}
 $$
+
 其特征标具有性质：
+
 $$
 \begin{align}
-\chi(g)=\mathrm{tr} D(g)=\sum\delta_{g,e}=\left\{
+\chi(g)=\mathrm{tr} D(g)=\sum\delta_{g,e}=\left{
 \begin{aligned}
 n~~~g=e\\
 0~~~g\neq e
@@ -396,15 +471,20 @@ n~~~g=e\\
 \right.
 \end{align}
 $$
+
 共轭直和分解系数因此非常简单：
+
 $$
 \begin{align}
 a_i=\frac1n\sum_{a\in\mathbb{G}}\chi(a)\bar\chi^{(i)}(a)=\frac1n\sum_{a\in\mathbb{G}}\chi(e)\bar\chi^{(i)}(e)=l_i
 \end{align}
 $$
+
 对5.3节中第二个定理的非常不严谨证明：
+
 $$
 \begin{align}
 \sigma=\sum_i\oplus a_i\sigma_i,\chi=\sum_ia_i\chi_i=\sum_il_i^2=n
 \end{align}
 $$
+
