凝聚态笔记

--- a/_posts/2024-04-18-能带论.md
+++ b/_posts/2024-04-18-能带论.md
@@ -81,7 +81,7 @@ $\vec k$与$-i\nabla = \frac{\vec p}{\hbar}$具有同等地位，代表了准动
 * 对于每一个波矢$\vec k$，都对应无穷多个能量$E_n$
 * $E_n(\vec k+\vec G)=E_n(\vec k)$
 第三点来源于波函数的周期性，这也决定了对于每一个n，其为一个周期函数，因而是有界的，从而形成了**能带**。
-![alt text](image-17.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-17.png)
 这里画成连续，是因为相邻两个$k$的差为$\frac{2\pi}{Na}$很小，被我们视为连续了。
 ### 弱周期性近似/近自由电子近似模型
 在之前，我们描述了自由电子气模型，在这个模型中，晶格势是平坦的。限制我们假设周期性势场非常微弱但不能忽略，需要对之前的平面波解进行一些修正。这种模型对价电子是s或者p轨道的金属是非常适用的。平均场近似下的电子哈密顿量：
@@ -206,16 +206,16 @@ E_{k+}\approx(E_0+\left|V_G\right|)+\frac{\hbar^2}{2m}(k+\frac G2)^2+(\frac{\hba
 $$
 
 一般而言，$|V_G|$是小量，所以$E_{k-}\sim -(k+\frac{G}{2})^2$，而$E_{k+}\sim (k+\frac{G}{2})^2$。
-![alt text](image-18.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-18.png)
 从图像上，布里渊区边界产生能隙的原因是因为产生了布拉格反射，因为$k-k'=G$正好满足了布拉格条件。此时，布里渊边界上$E_{k\pm}=E_k^0\pm\left|V_G\right|$分别对应了一个余弦驻波和一个正弦驻波。
-![alt text](image-19.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-19.png)
 由于势场不同，红线对应的势能较低，而绿线对应的势能更高。动能均相同，所以余弦驻波比正弦驻波能量更低。
 完整的能带/EDC关系为：
-![alt text](image-20.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-20.png)
 我们知道第一布里渊区有N个k，考虑到自旋，所以每一条能带都有2N个态。则在一维中，对于一价金属，第一条能带不会被填满，构成金属。对于二价晶体，第一条能带被填满，之上有能隙，构成绝缘体。推而广之，奇数价晶体都是导体，而偶数价晶体都是绝缘体。
 ### Kronig-Penney模型
 Kronig-Penney模型是一个一维周期方势阱模型。
-![alt text](image-21.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-21.png)
 在一个周期内解薛定谔方程，设有无势阱区域内的波函数为：
 
 $$
@@ -304,13 +304,13 @@ $$
 这个方程的解就是我们之前通过简并微扰得到的EDC。
 ### 二维的费米面形状
 简便起见，我们首先画出自由电子气下的费米面，然后对布里渊区边界附近的能带运用之前得到的修正。如前所述，价电子个数决定了费米面半径大小。一价晶体，价电子个数只能填满第一布里渊区的一半，二价晶体则填满整个第一布里渊区……等等等等。
-![alt text](image-23.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-23.png)
 接下来分别进行修正，可以得到1，2，4价晶体的费米面分别为：
-![alt text](image-24.png)
-![alt text](image-25.png)
-![alt text](image-26.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-24.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-25.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-26.png)
 ### 几何结构因子和能隙的关系
-![alt text](image-22.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-22.png)
 对于存在几何结构的晶体，其周期性势场是原胞内所有原子的势场的叠加：
 
 $$
