--- a/_posts/2024-04-18-金属中的电子.md
+++ b/_posts/2024-04-18-金属中的电子.md
@@ -224,7 +224,7 @@ C_{ev}=\left(\frac{\partial u}{\partial T}\right)_n=\frac{\pi^2}3k_B^2g(\varepsi
 $$
 
 物理上，结果就是气体的经典热容乘上一个修正的温度，这个温度的修正就来自于只有费米面附近的电子可以被激发这个事实。从第二个等式上看，自由电子气比热正比于温度，系数正比于费米面附近的态密度。由于晶格的比热在极低温下衰减更快，忽略后。我们测量极低温下金属比热，其就反映了自由电子气的比热，从而可以得到费米面附近的态密度。
-![alt text](image-16.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-16.png)
 ### 电子气对电磁场的响应
 认为外电磁场的振荡频率（比如可见光）远高于电子弛豫时间倒数，则我们可以认为电子与外电磁场相互作用时，电子相互作用可以忽略，电子近似自由。在这种情况下我们可以写出其运动方程：
 
