--- a/_posts/2024-05-18-#-声子热学性质.md
+++ b/_posts/2024-05-18-#-声子热学性质.md
@@ -198,7 +198,7 @@ $$
 
 对所有声子类型s求和即得到结论。
 显然在群速度为0的点态密度产生奇点。称为Van Hove奇点。
-![alt text](image-12.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-12.png)
 ### 非简谐相互作用
 简谐近似导致晶格体积其实不会变化，宏观上晶体没有热膨胀。引入非简谐相互作用，则晶体可以热膨胀，不同平衡体积下，色散关系不同。定义体膨胀系数为：
 
@@ -248,8 +248,8 @@ $$
 
 且考虑到$v_x^2=\frac{1}{3}v^2$，所以有$\kappa = \frac{1}{3}c_V v l$。**理想的无穷大晶体中，只有简谐力的声子是无法发生碰撞的，在晶体的缺陷和边界处可能发生碰撞。但简谐近似下只会发生弹性散射。只有非简谐近似下才有非弹性散射，可以建立热平衡。**
 对于声子的散射，由于动量守恒中可以加入一个任意倒格矢，所以有两种过程：
-![alt text](image-13.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-13.png)
 这个过程总动量守恒（没有发生能动量的整体流动），所以不产生温度梯度，不贡献热导。
-![alt text](image-14.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-14.png)
 第二种过程，称为倒逆过程，会产生热阻从而产生有限的热导。高温下，几乎所有模式都被激发，且声子的玻色分布退化为正比于温度T。弛豫时间反比于声子数目，因此反比于温度。所以高温下，热导率反比于温度。低温下，由于热导只有倒逆过程可以贡献，所以我们可以只考虑布里渊区边界的声子，则低温下玻色分布退化为：$e^{\frac{T}{\Theta_D}}$，同理我们得到$\kappa\approx e^{\frac{\Theta_D}{T}}$。在极低温度下，自由程几乎不再依赖于温度，因此热导正比热容，即正比于$T^3$。
-![alt text](image-15.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-15.png)
