--- a/_posts/2024-06-01-布洛赫电子动力学.md
+++ b/_posts/2024-06-01-布洛赫电子动力学.md
@@ -54,7 +54,7 @@ E(k)=\frac{\hbar^2}{2m}k_z^2+(n+\frac{1}{2})\hbar\omega_c,\omega_c=\frac{eB}{m_c
 $$
 
 在倒空间，自由电子将根据朗道能级进行占据：
-![alt text](image-29.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-29.png)
 在磁场横截面上，朗道能级为一个个朗道环。其简并度是很高的，一种粗糙的推导是假设弱磁场不改变总态密度，每一个朗道能级将相邻两个朗道所围面积中的态数分配给自己，因此朗道能级的简并度为：
 
 $$
