--- a/_posts/2024-06-10-凝聚态物理.md
+++ b/_posts/2024-06-10-凝聚态物理.md
@@ -119,7 +119,7 @@ $$
 
 所以$n=1,2,3,4,6$。
 三维空间中，共有**7大晶系14种布拉维格子**。
-![alt text](image-2.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-2.png)
 考虑到基元导致的对称性下降，最后只有**230种空间群**，对应**230种空间的对称操作**。
 
 ### 一些实际晶体的结构
@@ -130,10 +130,10 @@ $$
 * 面心立方fcc：最密堆积的晶体结构，如铜
 * 体心立方bcc：如铁
   完整的表格如图：
-  ![alt text](image-5.png)
-  ![alt text](image-3.png)
+  ![Desktop View](/assets/img/posts/凝聚态物理本科/image-5.png)
+  ![Desktop View](/assets/img/posts/凝聚态物理本科/image-3.png)
   对于金刚石结构，可以认为是fcc沿对角线进行平移获得，亦即双基元的fcc：
-  ![alt text](image-4.png)
+  ![Desktop View](/assets/img/posts/凝聚态物理本科/image-4.png)
   更复杂一点，钙钛矿结构，为简单正交结构加上CaTiO$_3$的基元。
 
 ### 晶向与晶面
@@ -152,14 +152,14 @@ $$
 
 
 且$l_1,l_2,l_3$互质，则晶向为$[l_1,l_2,l_3]$。
-![alt text](image-6.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-6.png)
 但是注意到，$[110]$和$[1\bar 1 0]$是等价的。约定一组等价的晶向为$<uvw>$。其中$u,v,w$均可以取其相反数。在晶胞种晶向的表示是依赖于基矢的选取的。
 考虑到不共线三点可以定义一个晶面，且该晶面也包含无穷格点。一组无穷多且等间距的平行面用一族晶面来表示，晶面用米勒指数标记，用圆括号括出。
 仍然以晶胞为讨论对象，以某一个格点为原点，选取晶胞基矢。确定离原点最近的晶面在基矢上的截距为$l_1(\vec a_1),l_2(\vec a_2),l_3(\vec a_3)$，取倒数$\frac{1}{l_1},\frac{1}{l_2},\frac{1}{l_3}$，等比例化为最小整数$h,k,l$，则米勒指数为$(hkl)$。如果晶面平行于某个基矢，则对应的指数为0。
-![alt text](image-7.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-7.png)
 同样的，由于立方晶系的对称性，导致不同米勒指数对应的晶面可以是等价的。用大括号${hkl}$表示一组等价的晶面，比如${hkl}=(110)(\bar 110)(101)(10\bar1)(011)(01\bar1)$。**在立方晶系种，晶面$(hkl)$的法向正好是晶向$[hkl]$。**
 六角晶系比较特殊，会用四指数。前三指数之和必定为0。
-![alt text](image-8.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-8.png)
 当然我们也可以用原胞基矢来表示晶面。除了基矢选取之外其他的规则是类似的。
 
 ### 倒格矢
@@ -254,7 +254,7 @@ $$
 | ------ | -------- | -------- | -------- | -------- |
 | 倒格子 | 简单立方 | 面心立方 | 体心立方 | 六角格子 |
 
-![alt text](image-9.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-9.png)
 在$(h,k,l)$指标中，晶面法向即为$h\vec a_1+k\vec a_2+l\vec a_3$。则倒格矢$\vec G=h\vec b_1+k\vec b_2+l\vec b_3$。可以计算出$\vec G$平行于晶面法向。晶面间距可以通过倒格矢计算：
 
 
@@ -282,7 +282,7 @@ $$
 由该公式知道有可以衍射的最短波长：$d>\frac{\lambda}{2}$。
 满足布拉格公式的光波衍射增强，但布拉格公式不能给出衍射强度分布，不满足布拉格公式的光波衍射也可能得到增强，虽然会较小。
 劳厄条件：
-![alt text](image.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image.png)
 散射过程中波矢改变方向不改变模长，则相当于附加一个相因子$e^{i(\vec k-\vec k')\vec r}$。则总散射振幅为
 
 
@@ -309,7 +309,7 @@ $$
 
 设定$\vec G_1$是$\vec G$方向上的最短倒格矢，则令$\vec G=n\vec G_1=n\frac{2\pi}{d}$则可以通过劳厄条件回到布拉格条件。这里$n$是整数。
 Ewald球：
-![alt text](image-1.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-1.png)
 想看到更多的衍射峰可以：
 
 * 入射光用非单色光
