--- a/_posts/2024-04-18-晶格振动.md
+++ b/_posts/2024-04-18-晶格振动.md
@@ -50,7 +50,7 @@ $$
 $$
 
 不同的波矢可以描述相同的振动，其互相之间相差整数个倒格矢$\frac{2\pi}{a}$。由于$\omega(k+G)=\omega(G)$且$\exp(iGR)=1$，所以不改变振荡行为。
-![Desktop View](/assets/img/posts/凝聚态物理本科/image-10.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-10.webp)
 只有最小波矢才是独立格波。
 格波具有一些极限特征：
 * $q\to 0$时，$\omega\to \sqrt{\frac{\beta}{M}}aq=vq$，频率正比波矢，为声波。
@@ -110,7 +110,7 @@ $$
 $$
 
 相比于单原子链，双原子链在每一个格波矢上有两个振动模式。其中，$\omega_-$被称为声学支，而$\omega_+$被称为光学支。这是根据两种模式对光声不同的耦合强度而定义的。在布里渊区中心附近，假如邻近原子带异种电荷，则形成偶极振动。光学支对应的偶极振动能与可见光发生很好的耦合。而声学支对应的模式则是邻近两原子运动模式完全相同，仿佛绑定然后整体形成了一个纵波，即类似声波。
-![Desktop View](/assets/img/posts/凝聚态物理本科/image-11.png)
+![Desktop View](/assets/img/posts/凝聚态物理本科/image-11.webp)
 在布里渊区边界上，声学支和光学支分别对应重原子静止或者轻原子静止两种振动模式。
 对于声学支：
 
