--- a/_posts/2024-06-01-布洛赫电子动力学.md
+++ b/_posts/2024-06-01-布洛赫电子动力学.md
@@ -100,14 +100,14 @@ $$
 $$
 
 实验上通过扫描磁场，可以影响电子回旋的朗道能级从而周期性（相对于$\frac{1}{B}$）地改变磁化率、比热等性质。这种现象被称为量子振荡（de Hass-Van Alphen Effect）。
-![de hassvan alphen](image-30.webp)
+![de hassvan alphen](/assets/img/posts/凝聚态物理本科/image-30.webp)
 对于三维情况，费米面与磁场的交线有很多条，所有的轨道对于de Hass-Van Alphen效应都会有贡献。类似最小作用量原理中，所有可能路径都可以贡献相位，但是由于高密而迅速抵消，最终极值路径留存。这里总效应最终也是由极值轨道贡献。
-![Au,Ag,Cu Quantum Resonance](image-31.webp)
+![Au,Ag,Cu Quantum Resonance](/assets/img/posts/凝聚态物理本科/image-31.webp)
 由于金银铜都是fcc结构，
 > FCC倒格子为BCC，BCC倒格子为FCC。且两者倒格子的晶格常数均为$\frac{2\pi}{a}$，可能与独立原子数有关
 
 计算可以得到，自由电子的费米球直径为$2k_F\approx\frac{9.8}{a}$，通过六角面的格点间距为bcc格子的[111]方向，亦即$\frac{10.88}{a}$，而通过方形面连接的间距为$\frac{12.57}{a}$，因此金银铜只在六角面附近由费米面的连接。
-![费米面](image-32.webp)
+![费米面](/assets/img/posts/凝聚态物理本科/image-32.webp)
 ### IQHE
 
 ## 电阻
@@ -170,7 +170,7 @@ $$
 * 低温下声子动量很小，散射角很小，$1-\cos\theta=2\sin^2\frac{\theta}{2}=\frac{1}{2}(q/k_F)^2\sim T^2$
 * 低温下，假设只有低频声学支，则$\omega=vq$，则声子数目形式上为$\int \varepsilon^2f(\frac{\varepsilon}{k_BT})\mathrm d\varepsilon\propto T^3$。
 因此总的而言，$\frac{1}{\tau}\propto T^5$，亦即$\rho\propto T^5$。但这实质上是只考虑了动量守恒中$\vec G=0$的过程，由于低温下这个过程是$T^5$的压低，因此倒逆过程（$\vec G\neq 0$）将会对电阻率有贡献。
-![U过程](image-33.webp)
+![U过程](/assets/img/posts/凝聚态物理本科/image-33.webp)
 倒逆过程相对于正常过程，其波矢具有一个极小值。但一旦发生，电子的运动受到极大散射，因而在低温下对电阻具有可观的贡献。这个贡献就由这个极小值的波矢决定，定义刚好能激发这个最小波矢对应的温度为$\theta$，则$\rho\propto e^{-\frac{\theta}{T}}$。
 顺带一提，电子电子相互作用的散射概率正比于$T^2$，因此在低温下，电子电子相互作用的散射会压倒电子声子相互作用的散射。
 ### 其他电阻贡献
