--- a/_posts/2024-06-10-凝聚态物理.md
+++ b/_posts/2024-06-10-凝聚态物理.md
@@ -153,7 +153,7 @@ $$
 
 且$l_1,l_2,l_3$互质，则晶向为$[l_1,l_2,l_3]$。
 ![Desktop View](/assets/img/posts/凝聚态物理本科/image-6.webp)
-但是注意到，$[110]$和$[1\bar 1 0]$是等价的。约定一组等价的晶向为$<uvw>$。其中$u,v,w$均可以取其相反数。在晶胞种晶向的表示是依赖于基矢的选取的。
+但是注意到，$[110]$和$[1\bar 1 0]$是等价的。约定一组等价的晶向为$\langle uvw\rangle$ 。其中$u,v,w$均可以取其相反数。在晶胞种晶向的表示是依赖于基矢的选取的。
 考虑到不共线三点可以定义一个晶面，且该晶面也包含无穷格点。一组无穷多且等间距的平行面用一族晶面来表示，晶面用米勒指数标记，用圆括号括出。
 仍然以晶胞为讨论对象，以某一个格点为原点，选取晶胞基矢。确定离原点最近的晶面在基矢上的截距为$l_1(\vec a_1),l_2(\vec a_2),l_3(\vec a_3)$，取倒数$\frac{1}{l_1},\frac{1}{l_2},\frac{1}{l_3}$，等比例化为最小整数$h,k,l$，则米勒指数为$(hkl)$。如果晶面平行于某个基矢，则对应的指数为0。
 ![Desktop View](/assets/img/posts/凝聚态物理本科/image-7.webp)
