人工智能基础小修

--- a/_posts/2024-12-17-人工智能基础.md
+++ b/_posts/2024-12-17-人工智能基础.md
@@ -203,7 +203,7 @@ X\longrightarrow Y\longrightarrow Z
 \end{align}
 $$
 
-有概率公式为：$P(X,Y,Z)=P(X)P(Y|X)P(Z|Y)$。
+有概率公式为：$P(X,Y,Z)=P(X)P(Y\vert X)P(Z\vert Y)$。
 
 * 在不知道Y的时候：
   
@@ -237,7 +237,7 @@ X\longleftarrow Y\longrightarrow Z
 \end{align}
 $$
 
-有概率公式为：$P(X,Y,Z)=P(Y)P(X|Y)P(Z|Y)$。
+有概率公式为：$P(X,Y,Z)=P(Y)P(X\vert  Y)P(Z\vert Y)$。
 
 * 在不知道Y的时候：
   
@@ -273,8 +273,8 @@ P(a,b,c) = P(a)*P(b)*P(c|a,b)成立，即在c未知的条件下，a、b被阻断
 
 ![image-20230520110135484](/assets/img/posts/人工智能基础.assets/image-20230520110135484.png)
 
-1. 在c未知的时候，有：P(a,b,c)=P(c)*P(a|c)*P(b|c)，此时，没法得出P(a,b) = P(a)P(b)，即c未知时，a、b不独立。
-2. 在c已知的时候，有：P(a,b|c)=P(a,b,c)/P(c)，然后将P(a,b,c)=P(c)*P(a|c)*P(b|c)带入式子中，得到：P(a,b|c)=P(a,b,c)/P(c) = P(c)*P(a|c)*P(b|c) / P(c) = P(a|c)*P(b|c)，即c已知时，a、b独立。
+在c未知的时候，有：P(a,b,c)=P(c)*P(a|c)*P(b|c)，此时，没法得出P(a,b) = P(a)P(b)，即c未知时，a、b不独立。
+在c已知的时候，有：P(a,b|c)=P(a,b,c)/P(c)，然后将P(a,b,c)=P(c)*P(a|c)*P(b|c)带入式子中，得到：P(a,b|c)=P(a,b,c)/P(c) = P(c)*P(a|c)*P(b|c) / P(c) = P(a|c)*P(b|c)，即c已知时，a、b独立。
 
 ![image-20230520120225589](/assets/img/posts/人工智能基础.assets/image-20230520120225589.png)
 
@@ -303,7 +303,7 @@ X\longrightarrow Z\longleftarrow Y
 \end{align}
 $$
 
-有概率公式为：$P(X,Y,Z)=P(Z|X,Y)P(X,Y)$。
+有概率公式为：$P(X,Y,Z)=P(Z\vert X,Y)P(X,Y)$。
 
 **被观察的结果会导致原因不独立**。
 
@@ -337,7 +337,7 @@ $$
 * X:  需要查询的事件
 * E：条件集/已观察的事件
 * Y：隐藏事件
-* 目标查询$P(X|E)$
+* 目标查询$P(X\vert E)$
 
 #### 枚举推断
 
