--- a/_posts/2023-12-20-数字图像处理.md
+++ b/_posts/2023-12-20-数字图像处理.md
@@ -9,4 +9,4 @@ math: true
 mermaid: true
 ---
 # 数字图像处理
-<embed src="/assets/img/posts/凝数字图像处理/main.pdf" type="application/pdf" width="100%" height="600px" />
+<embed src="/assets/img/posts/数字图像处理/main.pdf" type="application/pdf" width="100%" height="600px" />
