--- a/_posts/2024-09-27-#-李群和李代数.md
+++ b/_posts/2024-09-27-#-李群和李代数.md
@@ -728,7 +728,7 @@ $$
 
 这意味着我们可以用一个一维参数$\theta$和一个三维受约束参数$\mathbf n$描述群，可以将$\mathbf n$视为一个方向，而把$\theta$作为半径，群即成为三维空间中半径为$\pi$的球体，其中每一个点均为一个群元。
 
-![1722434627900](image/李群和李代数/1722434627900.png "$\mathbf{SO}(3)$群的二维表示")
+![1722434627900](/assets/img/posts/群论image/李群和李代数/1722434627900.png "$\mathbf{SO}(3)$群的二维表示")
 
 特殊在于，球面上的对径点是同一个点，类似周期性边界条件。$\mathbf{SO}(3)$群显然是一个道路连通群。但是由于周期性边界的存在，显然任意对径点之间的连线是一个闭合回路，而其无法拓扑等价于一个点。因而其非单连通而是复连通的。
 
