--- a/_posts/2024-12-16-向量空间的理论.md
+++ b/_posts/2024-12-16-向量空间的理论.md
@@ -4,7 +4,7 @@ author: wangq1h
 date: 2023-01-27 22:40:00 +0800
 categories: [Geometric Method in Physics]
 tags: [向量空间]
-pin: true
+pin: false
 math: true
 mermaid: true
 ---
