修正李群李代数初步

--- a/_posts/2024-09-27-#-李群和李代数.md
+++ b/_posts/2024-09-27-#-李群和李代数.md
@@ -367,9 +367,9 @@ $$
 如果存在$\mathfrak{g}\in\mathfrak{gl}$，则称其为李子代数。用数学的语言描述即$\exists \text{a set }A,\forall a,b\in A, c=[a,b]\in A$。
 暂举几例：
 
-* $\mathfrak{sl}$代表零迹矩阵的集合，即$\mathfrak{sl}(n,\kappa)={A\in\mathfrak{gl}(n,\kappa)|\mathrm{tr}(A)=0}$。显然，其封闭性可以由$\mathrm{tr}(AB)=\mathrm{tr}(BA)$保证。
-* $\mathfrak{so}$代表反对称矩阵的集合，即$\mathfrak{so}(n,\kappa)={A\in\mathfrak{gl}(n,\kappa)|A^T=-A}$。
-* $\mathfrak{u}$的线性空间为反厄米矩阵的集合，即$\mathfrak{u}(n,\kappa)={A\in\mathfrak{gl}(n,\kappa)|A^\dagger=-A}$。
+* $\mathfrak{sl}$代表零迹矩阵的集合，即$\mathfrak{sl}(n,\kappa)=\{A\in\mathfrak{gl}(n,\kappa)|\mathrm{tr}(A)=0\}$。显然，其封闭性可以由$\mathrm{tr}(AB)=\mathrm{tr}(BA)$保证。
+* $\mathfrak{so}$代表反对称矩阵的集合，即$\mathfrak{so}(n,\kappa)=\{A\in\mathfrak{gl}(n,\kappa)|A^T=-A\}$。
+* $\mathfrak{u}$的线性空间为反厄米矩阵的集合，即$\mathfrak{u}(n,\kappa)=\{A\in\mathfrak{gl}(n,\kappa)|A^\dagger=-A\}$。
 
 李群和李代数和李代数的关系可以通过BCH公式看出。由于李代数的封闭性，因此对于一个李子代数$\mathfrak{g}\subset\mathfrak{gl}(n,\kappa)\quad\kappa=\mathbb Q,\mathbb{R},\mathbb{C}$，易知：
 
@@ -553,7 +553,7 @@ $$
 
 $$
 \begin{align}
-\mathrm{T^aT^b}=-\delta^{ab}
+\mathrm{T^a T^b}=-\delta^{ab}
 \end{align}
 $$
 
@@ -879,7 +879,5 @@ $$
 
 
 可以通过表示的维数相等来验证。由于任意表示$D^j$都可以从$\underbrace{D^{\frac12}\otimes\cdots\otimes D^{\frac12}}_{2j}$中取最高权既约表示中获得，因而也称$D^{\frac12}$为自然表示。
-
-#### 
 
 [^1]: 这一步物理上有重要应用：寻找狄拉克矩阵。
