--- a/_posts/2024-09-27-#-李群和李代数.md
+++ b/_posts/2024-09-27-#-李群和李代数.md
@@ -367,9 +367,9 @@ $$
 如果存在$\mathfrak{g}\in\mathfrak{gl}$，则称其为李子代数。用数学的语言描述即$\exists \text{a set }A,\forall a,b\in A, c=[a,b]\in A$。
 暂举几例：
 
-* $\mathfrak{sl}$代表零迹矩阵的集合，即$\mathfrak{sl}(n,\kappa)=\{A\in\mathfrak{gl}(n,\kappa)\mid \mathrm{tr}(A)=0\}$。显然，其封闭性可以由$\mathrm{tr}(AB)=\mathrm{tr}(BA)$保证。
-* $\mathfrak{so}$代表反对称矩阵的集合，即$\mathfrak{so}(n,\kappa)=\{A\in\mathfrak{gl}(n,\kappa)\mid A^T=-A\}$。
-* $\mathfrak{u}$的线性空间为反厄米矩阵的集合，即$\mathfrak{u}(n,\kappa)=\{A\in\mathfrak{gl}(n,\kappa)\mid A^\dagger=-A\}$。
+1. $\mathfrak{sl}$代表零迹矩阵的集合，即$\mathfrak{sl}(n,\kappa)=\{A\in\mathfrak{gl}(n,\kappa)\mid \mathrm{tr}(A)=0\}$。显然，其封闭性可以由$\mathrm{tr}(AB)=\mathrm{tr}(BA)$保证。
+2. $\mathfrak{so}$代表反对称矩阵的集合，即$\mathfrak{so}(n,\kappa)=\{A\in\mathfrak{gl}(n,\kappa)\mid A^T=-A\}$。
+3. $\mathfrak{u}$的线性空间为反厄米矩阵的集合，即$\mathfrak{u}(n,\kappa)=\{A\in\mathfrak{gl}(n,\kappa)\mid A^\dagger=-A\}$。
 
 李群和李代数和李代数的关系可以通过BCH公式看出。由于李代数的封闭性，因此对于一个李子代数$\mathfrak{g}\subset\mathfrak{gl}(n,\kappa)\quad\kappa=\mathbb Q,\mathbb{R},\mathbb{C}$，易知：
 
