--- a/_posts/2024-12-23-advqm.md
+++ b/_posts/2024-12-23-advqm.md
@@ -61,7 +61,7 @@ $$
 H^{(0)}\ket{n^{(2)}}+H'\ket{n^{(1)}}=E_n^{(2)}\ket{n^{(2)}}+E_n^{(1)}\ket{n^{(1)}}+E_n^{(2)}\ket{n^{(0)}}
 $$
 
-同样左乘$\bra{n^{(0)}}$，得到二阶能量微扰展开为$E_n^{(2)}=\sum_{m\neq n}\frac{|\bra{m^{(0)}}H'\ket{n^{(0)}}|^2}{E_n^{(0)}-E_m^{(0)}}$。这一理论只适用于无简并微扰。
+同样左乘$\bra{n^{(0)}}$，得到二阶能量微扰展开为$E_n^{(2)}=\sum_{m\neq n}\frac{\mid\bra{m^{(0)}}H'\ket{n^{(0)}}\mid^2}{E_n^{(0)}-E_m^{(0)}}$。这一理论只适用于无简并微扰。
 
 * 微扰不能实质性改变无微扰系统能谱，比如使定态变成散射态。
 * 微扰适用条件：$\frac{\bra{m^{(0)}}H'\ket{n^{(0)}}}{E_n^{(0)}-E_m^{(0)}}\ll1$。$\lambda$必须是一个无量纲数。既依赖于无量纲数要很小，也依赖于$H'$的可积性等等。
@@ -126,7 +126,6 @@ $$
 > &=\bra{\psi_\lambda}(\frac{\mathrm d}{\mathrm d\lambda}H_\lambda)\ket{\psi_\lambda}
 > \end{align}
 > $$
->
 > {: .prompt-tip}
 
 因此可以方便计算以下矩阵元：
@@ -143,7 +142,6 @@ $$
 > -\frac{4 \mathrm{me}^{3}}{2\left(4 \pi \epsilon_{0}\right)^{2} \hbar^{2} n^{2}}&=\bra{nlm}-\frac{2e}{4\pi\epsilon_0}\frac1r\ket{nlm}\\
 > \end{align}
 > $$
->
 > {: .prompt-tip}
 
 $$
@@ -158,7 +156,6 @@ $$
 > \frac{\hbar^2}{ma_0^2n^3}&=\bra{nlm}\frac{\hbar^2(l+\frac12)}{mr^2}\ket{nlm}\\
 > \end{align}
 > $$
->
 > {: .prompt-tip}
 
 $$
@@ -175,7 +172,6 @@ $$
 > \therefore \bra{nlm}-\frac{\hbar^2l(l+1)}{mr^3}+\frac{e^2}{4\pi\epsilon_0}\frac1{r^2}\ket{nlm}&=0
 > \end{align}
 > $$
->
 > {: .prompt-tip}
 
 ### 相对论动能
