--- a/_posts/2024-12-23-advqm.md
+++ b/_posts/2024-12-23-advqm.md
@@ -126,7 +126,7 @@ $$
 > &=\bra{\psi_\lambda}(\frac{\mathrm d}{\mathrm d\lambda}H_\lambda)\ket{\psi_\lambda}
 > \end{align}
 > $$
-> {: .prompt-tip}
+{: .prompt-tip}
 
 因此可以方便计算以下矩阵元：
 
@@ -142,7 +142,7 @@ $$
 > -\frac{4 \mathrm{me}^{3}}{2\left(4 \pi \epsilon_{0}\right)^{2} \hbar^{2} n^{2}}&=\bra{nlm}-\frac{2e}{4\pi\epsilon_0}\frac1r\ket{nlm}\\
 > \end{align}
 > $$
-> {: .prompt-tip}
+{: .prompt-tip}
 
 $$
 \bra{nlm}\frac1{r^2}\ket{nlm}=\frac1{(l+\frac12)n^3a_0^2}
@@ -156,7 +156,7 @@ $$
 > \frac{\hbar^2}{ma_0^2n^3}&=\bra{nlm}\frac{\hbar^2(l+\frac12)}{mr^2}\ket{nlm}\\
 > \end{align}
 > $$
-> {: .prompt-tip}
+{: .prompt-tip}
 
 $$
 \bra{nlm}\frac1{r^3}\ket{nlm}=\frac1{a_0^3l(l+\frac12)(l+1)n^3}
@@ -172,7 +172,7 @@ $$
 > \therefore \bra{nlm}-\frac{\hbar^2l(l+1)}{mr^3}+\frac{e^2}{4\pi\epsilon_0}\frac1{r^2}\ket{nlm}&=0
 > \end{align}
 > $$
-> {: .prompt-tip}
+{: .prompt-tip}
 
 ### 相对论动能
 
